Update evolve-self-serve-cancellations text content
- Updated wireframing section text with more detailed description
- Removed duplicate caption from solution-image section
- Improved content flow and readability

--- a/evolve-self-serve-cancellations.html
+++ b/evolve-self-serve-cancellations.html
@@ -246,7 +246,7 @@
                 <div class="metrics-left">
                     <h3 class="text-heading-3">Testing</h3>
                     <p class="text-body-base">I created a prototype, designing a hybrid solution based on the 3 variations of wireframes.</p>
-                    <p class="text-body-base">Overall, the cancellation flow performed well with users saying it was easy to use. All users successfully navigated the process and clearly understood that their request was in progress. They also consistently valued the alternative options, with most indicating a preference for offering a discount instead of canceling.</p>
+                    <p class="text-body-base">Overall, the cancellation flow performed well with users saying it was fast and easy to use. All users successfully navigated the process and clearly understood that their request was in progress. They also consistently valued the alternative options, with most indicating a preference for offering a discount instead of canceling. Based on the feedback, it seemed like the solution had a considerable impact on the user's perceived speed of the process and comprehension of the cancelation outcome. I decided to move forward with Version 2 for final designs.</p>
                 </div>
             </div>
         </section>
@@ -266,7 +266,8 @@
             <div class="container">
                 <div class="metrics-left">
                     <h3 class="text-heading-3">Solution</h3>
-                    <p class="text-body-base">Based on the test findings, I put a bigger spotlight on solutions that help owners preserve guest bookings, like offering a discount to a guest for an inconvenience. I also simplified the whole process by trimming down the amount of text on screen and linking to our Help Center and other resources.</p>
+                    <p class="text-body-base">Based on the test findings, I designed a solution that focused on delivering personalized, high-value alternative options to create for the user a moment of reflection (e.g. providing guest discounts). I sprinkled education throughout the process by way of tips and links to external resources with the goal of communicating the potential negative impact of canceling. I also simplified the whole process by trimming down the amount of text on screen and creating an all-in-one cancelation tool for canceling and requesting a waiver to minimize back and forth seen in the current process.</p>
+                    <p class="text-body-base">The final solution had a total of 6 steps. This was intentional as I wanted to make sure we had room to education and inform the user before they made their final decision. You can dive into the figma for the nitty gritty details.</p>
                 </div>
             </div>
         </section>
