Update evolve-inbox and evolve-owner-account pages
- Updated content and styling on both case study pages
- Improved user experience and content flow

--- a/evolve-owner-account.html
+++ b/evolve-owner-account.html
@@ -67,7 +67,7 @@
                     </div>
                     <div class="content-section">
                         <h3 class="text-heading-3">Problem</h3>
-                        <p class="text-body-base">The Owner Account (OA) was outdated, fragmented, and difficult to use. Over 30k owners relied on it weekly, if not daily. Built on Salesforce Communities, which meant it was hard to scale and customize, and the legacy experience broke accessibility standards, used clunky flows that often led to dead ends, and forced owners to call support for basic tasks. This eroded trust and created major inefficiencies. Compared to competitors like Airbnb and Vrbo, Evolve’s OA felt opaque, so to speak, leaving owners disempowered. To move forward, we needed a modern platform, a stronger research foundation, and a scalable design that rebuilt trust and put owners back in control. This was originally a 1:1 feature parity project.</p>
+                        <p class="text-body-base">The Owner Account (OA) was outdated, fragmented, and difficult to use. Over 30k owners relied on it weekly, if not daily. Built on Salesforce Communities, which meant it was hard to scale and customize, and the legacy experience broke accessibility standards, used clunky flows that often led to dead ends, and forced owners to call support for basic tasks. This eroded trust and created major inefficiencies. Compared to competitors like Airbnb and Vrbo, Evolve’s OA felt opaque and left owners disempowered. To move forward, we needed a modern platform, a stronger research foundation, and a scalable design that rebuilt trust and put owners back in control. This was originally a 1:1 feature parity project.</p>
                     </div>
                     <div class="content-section">
                         <h3 class="text-heading-3">Solution</h3>
@@ -154,7 +154,7 @@
                     <p class="text-body-base">To understand what problems we needed to solve, I partnered with our researcher on a qualitative and quantitative deep dive.</p>
                     <ul>
                         <li class="text-body-base"><span class="text-body-base-bold">Defined key personas:</span> First-time Renters, FRBOs, Investors, and Hands-on Hosts—making sure my designs reflected our diverse user needs.</li>
-                        <li class="text-body-base"><span class="text-body-base-bold">Dug into for user insight:</span> I collaborated with our researcher to conduct interviews and surveys to understand what was working and what wasn’t. </li>
+                        <li class="text-body-base"><span class="text-body-base-bold">Dug into user insights:</span> I collaborated with our researcher to conduct interviews and surveys to understand what was working and what wasn’t. </li>
                         <li class="text-body-base"><span class="text-body-base-bold">Analyzed the UX and UI:</span> I uncovered pain points like confusing flows, accessibility issues, and lack of responsiveness.</li>
                         <li class="text-body-base"><span class="text-body-base-bold">Dove into our data on Salesforce:</span> I wanted to better understand what our technical contraints were in order to make important improvements for mvp.</li>
                         <li class="text-body-base"><span class="text-body-base-bold">Wireframes:</span> I created quick wires to guide the team in strategy discussions.</li>
@@ -169,7 +169,7 @@
                         </div>
                         <div class="metrics-item">
                             <p class="text-body-base-bold"><span style="color: var(--color-grey);">Participants</span></p>
-                            <p class="text-body-base">Owners in our research panel, In-house owners</p>
+                            <p class="text-body-base">Owners in our research panel and in-house owners</p>
                         </div>
                         <div class="metrics-item">
                             <p class="text-body-base-bold"><span style="color: var(--color-grey);">Total features analyzed</span></p>
@@ -187,7 +187,7 @@
         <!-- Personas section with fire-50 background (below impact-next) -->
         <section class="discovery-images" id="personas" style="background: var(--color-fire-50); padding-top: var(--space-64); padding-bottom: var(--space-64); min-height: 100vh; display: grid; place-items: center;">
             <div class="container">
-                <p class="text-body-base-bold discovery-caption">Used personas to guide every feature redesign from UI to IA</p>
+                <p class="text-body-base-bold discovery-caption">Working with our user personas to guide every feature redesign</p>
                 <div class="personas-grid">
                     <div class="persona-item">
                         <img src="assets/evolve_oa_persona_FTR.png" alt="First-time renters" />
