--- a/evolve-inbox.html
+++ b/evolve-inbox.html
@@ -169,8 +169,8 @@
                     <p class="text-body-base">First, I needed to understand how our owners were currently communicating. Second, I needed to uncover opportunities that I could leverage to build a tool they would use. I led a research-first approach combining:</p>
                     <ul>
                         <li class="text-body-base"><span class="text-body-base-bold">Owner feedback:</span> Mined NPS feedback and in-app feedback to surface recurring pain points, looking specifically at feedback mentioning “communication”.</li>
-                        <li class="text-body-base"><span class="text-body-base-bold">User surveys:</span> I developed an initial set of questions and goals and reviewed with my PM and researcher. I wanted to better understand their current behaviors and expectations of communicationresponsibility by booking phase.</li>
-                        <li class="text-body-base"><span class="text-body-base-bold">Empathy storming:</span> I led an empathy storming session with the team to understand the potential positive and negative sentiments toward a new communication tool. This was based off of user feedback from the surveys.</li>
+                        <li class="text-body-base"><span class="text-body-base-bold">User surveys:</span> I developed an initial set of questions and goals and reviewed with my PM and researcher. I wanted to better understand their current behaviors and expectations of communication responsibility by booking phase.</li>
+                        <li class="text-body-base"><span class="text-body-base-bold">Empathy storming:</span> I led an empathy storming session with the team to understand the potential positive and negative sentiments toward a new communication tool. This was based off of user feedback from the surveys. I used this exercise to define the bounds of what a good—and bad—experience would look like for the users.</li>
                         <li class="text-body-base"><span class="text-body-base-bold">AI + Design:</span> Used ChatGPT to analyze thousands of lines of owner feedback, cluster themes, and identify root causes behind service breakdowns, user dissatisfaction, and pain points.</li>
                         <li class="text-body-base"><span class="text-body-base-bold">Current state analysis:</span> Mapped out current flow and process, and interviewed internal stakeholders to understand frontline team issues, needs, and process gaps. Created a user journey map with insights pulled from our survey, NPS feedback, and any frontline team feedback.</li>
                         <li class="text-body-base"><span class="text-body-base-bold">Data insights:</span> Identified >20K off-platform messages exchanged across 23K reservations, showing the scale of fragmented communication. We also analyzed the timing of the inbound messages in each booking phase to inform changes in the product strategy.</li>
@@ -266,7 +266,7 @@
                         <li class="text-body-base"><span class="text-body-base-bold">Frontline teams:</span> Lower service costs, fewer escalations, greater transparency.</li>
                         <li class="text-body-base"><span class="text-body-base-bold">Business:</span> Higher NPS, improved response time, stronger review trends.</li>
                     </ul>
-                    <p class="text-body-base">I started with mockups and an initial beta flow. I then created a user journey map to build empathy for the user. Once I presented the general design direction to the team, I worked with the researcher to test the initial designs with users. We found in testing that our users thought the design was user-friendly and easy to understand.</p>
+                    <p class="text-body-base">I started with mockups and an initial beta flow. I then created a user journey map to build empathy for the user and circulated that with the team and leadership. Once I presented the general design direction to the team, I worked with the researcher to test the initial designs with users. Ultimately, users thought the design was user-friendly and easy to understand.</p>
                 </div>
                 <div class="metrics-right">
                     <div class="metrics-list">
@@ -326,7 +326,7 @@
                 <h3 class="text-heading-3">Designs</h3>
                 <p class="text-body-base">Due to the timeline of beta and releasing sooner to gather learnings, the beta was lean. I designed a minimal Inbox feature with a few educational interactions to help solve the problem of engagement and adoption. To make it easier for users to handle booking requests from Inbox, I created a pathway to the existing booking view.</p>
                 <p class="text-body-base">In my design work for beta and future releases, I made sure to address their needs mentioned in the survey, which included automated messaging, easier dispute resolution, a guest review system, clear guidelines on communication expectations between owner and guests. </p>
-                <p class="text-body-base">Follow along with my design process and decision making in my annotations throughout the Figma file.</p>
+                <p class="text-body-base">Follow along with my design process and decision making in my annotations throughout the Figma file 🚀</p>
             </div>
         </div>
       </section>
@@ -388,7 +388,7 @@
                 <div class="stats-row">
                     <div class="stats-item">
                         <h2 class="text-heading-2">&lt;30m</h2>
-                        <p class="text-body-base">84% of the beta owenrs responded within this time</p>
+                        <p class="text-body-base">84% of beta owners responded within this time</p>
                     </div>
                     <div class="stats-item">
                         <h2 class="text-heading-2">+1.9</h2>
