Add logo wiggle animation and update ai-design page
- Added wiggle animation to site logo on hover
- Created keyframe animation with 5-degree rotation
- Updated ai-design.html content and styling
- Enhanced user interaction with playful logo animation

--- a/ai-design.html
+++ b/ai-design.html
@@ -54,7 +54,7 @@
                 <div class="hero-content">
                     <h2 class="text-heading-2">AI + Design: My process</h2>
                     <p class="text-body-lg">AI is baked into my process as a creative sidekick—not a replacement for creativity, which will always be uniquely mine. I use tools like ChatGPT, Gemini, Cursor, Figma Make, and V0 to elevate my design process, surface blind spots, and speed up the busy work. It’s a starting point that helps me reframe problems, analyze large data sets, and inspire my team to think more critically. For me, AI is an exciting frontier*—one that’s about building new habits, embracing experimentation, and slowing down to ask better questions. It’s also a powerful tool I incorporate directly into end-user experiences whenever I can**.</p>
-                    <p class="text-body-sm ai-note">*I designed my website with Cursor, Github, and Figma. <a href="https://github.com/tlainy">Take a look at my Github</a><br><br>**I’ve placed 1st and 2nd in hackathons by creating user experiences powered by AI. Ask me about my hacks 🛠️</p>
+                    <p class="text-body-sm ai-note">*I designed my website with Figma and launched with Cursor and Github. <a href="https://github.com/tlainy">Take a look at my Github</a><br><br>**I’ve placed 1st and 2nd in hackathons by creating user experiences powered by AI. Ask me about my hacks 🛠️</p>
                 </div>
                 <div class="hero-media ai-hero-media">
                     <div class="ai-media-stack" aria-hidden="true">
