--- a/evolve-self-serve-cancellations.html
+++ b/evolve-self-serve-cancellations.html
@@ -114,7 +114,7 @@
                     <h3 class="text-heading-3">The problem, in detail</h3>
                     <p class="text-body-base">Guest booking cancellations were inherently complex. Since Evolve owners’ properties were listed across multiple distribution partners like Airbnb and Vrbo, each with its own rules and penalties, owners faced varying requirements when canceling. Cancellation fees acted as a deterrent, discouraging owners from backing out of bookings since cancellations negatively impacted their performance, search ranking, and long-term guest satisfaction. At the same time, these penalties upheld trust and credibility on the platform by holding owners to consistent standards.</p>
                     <p class="text-body-base">Fees were calculated based on how close the cancellation was to the guest’s check-in date and the reason for canceling, often amounting to a percentage of the total booking. In certain cases, owners could request a waive fee, but this required timely submission of specific documentation—adding another layer of complexity to the process.</p>
-                    <p class="text-body-base">Speed to cancel a booking was a clear issue. Due to the complex process of varying distribution partners, users couldn't handle their own cancelation without additional education. Lastly, users didn't understand or believe there were short- and long-term impacts on their property performance caused by canceling. There were 3 main themes: speed, education, and persuasion.</p>
+                    <p class="text-body-base">Speed to cancel a booking was a clear issue. Due to the complex process of varying distribution partners, users couldn't handle their own cancellation without additional education. Lastly, users didn't understand or believe there were short- and long-term impacts on their property performance caused by canceling. There were 3 main themes: speed, education, and persuasion.</p>
                     <ul>
                         <li class="text-body-base"><span style="color: var(--color-fire-500);">Speed: How could I design a new self-serve tool that simplifies a once complex process and makes canceling faster and easier than the original request or call methods?</span></li>
                         <li class="text-body-base"><span style="color: var(--color-fire-500);">Education: How could I leverage the user's selected cancellation reason to counter with a highly personalized, alternative solution that makes them pause and reconsider their decision?</span></li>
@@ -161,7 +161,7 @@
                     </ul>
                     <p class="text-body-base">To assess where we could have better informed or persuaded users to reconsider their decision:</p>
                     <ul>
-                        <li class="text-body-base"><span class="text-body-base-bold">Robust flow analysis:</span> I analyzed the current manual flow of requesting to finalizing a cancelation. What information were we communicating to the users to help them reconsider their decision? What was missing?</li>
+                        <li class="text-body-base"><span class="text-body-base-bold">Robust flow analysis:</span> I analyzed the current manual flow of requesting to finalizing a cancellation. What information were we communicating to the users to help them reconsider their decision? What was missing?</li>
                     </ul>
                     <p class="text-body-base">Toward the end, I went through several iterations of wireframes, discussing variations with my PM and engineer, and refining based on the usability tests that were conducted with users. I tested each variation to see each impact on speed, education, and persuasion.</p>
                 </div>
@@ -246,7 +246,7 @@
                 <div class="metrics-left">
                     <h3 class="text-heading-3">Testing</h3>
                     <p class="text-body-base">I created a prototype, designing a hybrid solution based on the 3 variations of wireframes.</p>
-                    <p class="text-body-base">Overall, the cancellation flow performed well with users saying it was fast and easy to use. All users successfully navigated the process and clearly understood that their request was in progress. They also consistently valued the alternative options, with most indicating a preference for offering a discount instead of canceling. Based on the feedback, it seemed like the solution had a considerable impact on the user's perceived speed of the process and comprehension of the cancelation outcome. I decided to move forward with Version 2 for final designs.</p>
+                    <p class="text-body-base">Overall, the cancellation flow performed well with users saying it was fast and easy to use. All users successfully navigated the process and clearly understood that their request was in progress. They also consistently valued the alternative options, with most indicating a preference for offering a discount instead of canceling. Based on the feedback, it seemed like the solution had a considerable impact on the user's perceived speed of the process and comprehension of the cancellation outcome. I decided to move forward with Version 2 for final designs.</p>
                 </div>
             </div>
         </section>
@@ -266,7 +266,7 @@
             <div class="container">
                 <div class="metrics-left">
                     <h3 class="text-heading-3">Solution</h3>
-                    <p class="text-body-base">Based on the test findings, I designed a solution that focused on delivering personalized, high-value alternative options to create for the user a moment of reflection (e.g. providing guest discounts). I sprinkled education throughout the process by way of tips and links to external resources with the goal of communicating the potential negative impact of canceling. I also simplified the whole process by trimming down the amount of text on screen and creating an all-in-one cancelation tool for canceling and requesting a waiver to minimize back and forth seen in the current process.</p>
+                    <p class="text-body-base">Based on the test findings, I designed a solution that focused on delivering personalized, high-value alternative options to create for the user a moment of reflection (e.g. providing guest discounts). I sprinkled education throughout the process by way of tips and links to external resources with the goal of communicating the potential negative impact of canceling. I also simplified the whole process by trimming down the amount of text on screen and creating an all-in-one cancellation tool for canceling and requesting a waiver to minimize back and forth seen in the current process.</p>
                     <p class="text-body-base">The final solution had a total of 6 steps. This was intentional as I wanted to make sure we had room to education and inform the user before they made their final decision. You can dive into the figma for the nitty gritty details.</p>
                 </div>
             </div>
