--- a/ai-design.html
+++ b/ai-design.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI + Design · TC Design</title>
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="stylesheet" href="styles/main.css">
     <meta name="description" content="AI + Design at TC Design">
     <link rel="preconnect" href="https://fonts.googleapis.com">
