--- a/evolve-self-serve-cancellations.html
+++ b/evolve-self-serve-cancellations.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Evolve Self‑Serve Cancellations · TC Design</title>
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="stylesheet" href="styles/main.css">
     <meta name="description" content="Evolve Self‑Serve Cancellations case study">
     <link rel="preconnect" href="https://fonts.googleapis.com">
